...
	            android:text="@string/mes_s" />	        	       
	        <TextView
	            android:text="@string/bytes" />
        </TableRow>
        <TableRow>	        
	        <EditText
	            android:id="@+id/editText2"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"            
	            android:inputType="numberSigned"
	            android:text="6"/>
	        <EditText
	            android:id="@+id/editText4"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"            
	            android:inputType="numberSigned"
	            android:text="32"/>
	        <EditText
...
		            android:id="@+id/textView1"
		            android:layout_width="0px"
		            android:layout_height="wrap_content"
		            android:layout_weight="0.5"
		            android:text="@string/group_id" />
		    <EditText
		            android:id="@+id/editText1"
		            android:layout_height="wrap_content"
		            android:layout_width="0px"
		            android:layout_weight=".5"            
		            android:inputType="numberSigned"
		            android:text="1"/>
			<TextView
...
				android:layout_weight=".5"
				android:inputType="numberSigned"
				android:text="1"/>
		</TableRow>
		<TableRow>    
	        <Button
	            android:id="@+id/button2"
	            android:layout_width="0px"
	            android:layout_height="wrap_content"
	            android:text="@string/start_sensor"
	            android:onClick="startSensor" 
	            style="@android:attr/buttonBarButtonStyle" />

...
	            android:layout_height="wrap_content"
	            android:text="@string/start_actuator"
	            android:onClick="startActuator"
	            style="@android:attr/buttonBarButtonStyle" />

	        <Button
	            android:id="@+id/button4"
	            android:layout_width="0px"
	            android:layout_height="wrap_content"
	            android:text="@string/start_server"
	            android:onClick="startServer"
	            style="@android:attr/buttonBarButtonStyle" />
		</TableRow>
...
				android:text="@string/reverse_stack"
				android:layout_weight="0.5"
				style="@android:attr/buttonBarButtonStyle"/>
		</TableRow>
		<TableRow>
			<Button
				android:id="@+id/button10"
				android:layout_width="0px"
				android:layout_height="wrap_content"
				android:onClick="startExperiment"
				android:text="@string/start_experiment"
				android:layout_weight="0.5"
				style="@android:attr/buttonBarButtonStyle"/>
			<Button
				android:id="@+id/button9"
				android:layout_width="0px"
				android:layout_height="wrap_content"
				android:onClick="stopExperiment"
				android:text="@string/stop_experiment"
				android:layout_weight="0.5"
				style="@android:attr/buttonBarButtonStyle"/>
		</TableRow>
    </TableLayout>   	
	    <EditText
	        android:id="@+id/oneInEditText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:ems="10"
	        android:scrollHorizontally="true"
	        android:inputType="none">
	    </EditText>
...
